# dbt-mermaid

./: .gitignore  pyproject.toml
.github/workflows/: lint-and-test.yaml
dbt_mermaid/: cli.py
tests/: test_cli.py
